# summit_xls_ur5_common

./: README.md
summit_xls_ur5_bringup/: CMakeLists.txt  package.xml
summit_xls_ur5_bringup/config/: arm_controllers.yaml  arm_params.yaml
summit_xls_ur5_bringup/config/camera_info/: left.yaml  right.yaml
summit_xls_ur5_bringup/launch/: bumblebee.launch  stereo.launch  summit_xls_complete.launch  summit_xls_rover.launch  summit_xls_ur5_bringup.launch  summit_xls_ur5_complete.launch  ur5_bringup_hw.launch  ur5_complete.launch  ur5_controllers.launch
summit_xls_ur5_bringup/scripts/: CModelStatusPublisher.py
summit_xls_ur5_common/: CMakeLists.txt  package.xml
summit_xls_ur5_description/: CMakeLists.txt  package.xml
summit_xls_ur5_description/launch/: summit_xls_ur5_omni_170214A_rviz.launch  summit_xls_ur5_omni_rviz.launch  summit_xls_ur5_state_robot.launch
summit_xls_ur5_description/robots/: summit_xls_omni_ur5_170214A.urdf.xacro  summit_xls_ur5_omni.urdf.xacro  summit_xls_ur5_omni_170214A.urdf.xacro
summit_xls_ur5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
summit_xls_ur5_moveit_config/config/: controllers.yaml  fake_controllers.yaml  ompl_planning.yaml  summit_xl.srdf
summit_xls_ur5_moveit_config/launch/: default_warehouse_db.launch  demo.launch  demo_real.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  summit_xl_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
ur_pad/: CMakeLists.txt  README.md  package.xml
ur_pad/config/: arm_ps3.yaml  arm_ps4.yaml
ur_pad/launch/: ur_pad.launch
ur_pad/src/: ur_pad.cpp
